// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ast flat map list impl 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "flat_map",
          },
          "name": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "list",
                  },
                  "name": "name",
                },
                {
                  "children": [],
                  "data": {
                    "value": "mapper",
                  },
                  "name": "name",
                },
              ],
              "data": {
                "operator": ",",
                "precedence": [
                  8,
                  8,
                ],
              },
              "name": "operator",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "value": "reduce",
                                  },
                                  "name": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": "list",
                                  },
                                  "name": "name",
                                },
                              ],
                              "data": {
                                "operator": "application",
                                "precedence": [
                                  9007199254740991,
                                  9007199254740992,
                                ],
                              },
                              "name": "operator",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "data": {
                                            "value": "acc",
                                          },
                                          "name": "name",
                                        },
                                        {
                                          "children": [],
                                          "data": {
                                            "value": "item",
                                          },
                                          "name": "name",
                                        },
                                      ],
                                      "data": {
                                        "operator": ",",
                                        "precedence": [
                                          8,
                                          8,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "acc",
                                                  },
                                                  "name": "name",
                                                },
                                              ],
                                              "data": {
                                                "operator": "...",
                                                "precedence": [
                                                  null,
                                                  9,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": "mapper",
                                                      },
                                                      "name": "name",
                                                    },
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": "item",
                                                      },
                                                      "name": "name",
                                                    },
                                                  ],
                                                  "data": {
                                                    "operator": "application",
                                                    "precedence": [
                                                      9007199254740991,
                                                      9007199254740992,
                                                    ],
                                                  },
                                                  "name": "operator",
                                                },
                                              ],
                                              "data": {
                                                "operator": "...",
                                                "precedence": [
                                                  null,
                                                  9,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                          ],
                                          "data": {
                                            "operator": ",",
                                            "precedence": [
                                              8,
                                              8,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": "parens",
                                        "precedence": [
                                          null,
                                          null,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                  ],
                                  "data": {
                                    "operator": "func",
                                    "precedence": [
                                      null,
                                      2,
                                    ],
                                  },
                                  "name": "operator",
                                },
                              ],
                              "data": {
                                "operator": "parens",
                                "precedence": [
                                  null,
                                  null,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "operator": "application",
                            "precedence": [
                              9007199254740991,
                              9007199254740992,
                            ],
                          },
                          "name": "operator",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "data": {
                                        "value": "first",
                                      },
                                      "name": "name",
                                    },
                                    {
                                      "children": [],
                                      "data": {
                                        "value": "second",
                                      },
                                      "name": "name",
                                    },
                                  ],
                                  "data": {
                                    "operator": ",",
                                    "precedence": [
                                      8,
                                      8,
                                    ],
                                  },
                                  "name": "operator",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "first",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "...",
                                            "precedence": [
                                              null,
                                              9,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "second",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "...",
                                            "precedence": [
                                              null,
                                              9,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": ",",
                                        "precedence": [
                                          8,
                                          8,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                  ],
                                  "data": {
                                    "operator": "parens",
                                    "precedence": [
                                      null,
                                      null,
                                    ],
                                  },
                                  "name": "operator",
                                },
                              ],
                              "data": {
                                "operator": "func",
                                "precedence": [
                                  null,
                                  2,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "operator": "parens",
                            "precedence": [
                              null,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {},
                          "name": "implicit_placeholder",
                        },
                      ],
                      "data": {
                        "operator": "parens",
                        "precedence": [
                          null,
                          null,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "application",
                    "precedence": [
                      9007199254740991,
                      9007199254740992,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": "block",
                "precedence": [
                  null,
                  null,
                ],
              },
              "name": "operator",
            },
          ],
          "data": {
            "operator": "func",
            "precedence": [
              null,
              null,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": ":=",
        "precedence": [
          null,
          1,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast flat map list reducer 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "acc",
              },
              "name": "name",
            },
            {
              "children": [],
              "data": {
                "value": "item",
              },
              "name": "name",
            },
          ],
          "data": {
            "operator": ",",
            "precedence": [
              8,
              8,
            ],
          },
          "name": "operator",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "acc",
                      },
                      "name": "name",
                    },
                  ],
                  "data": {
                    "operator": "...",
                    "precedence": [
                      null,
                      9,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "mapper",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "item",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "...",
                    "precedence": [
                      null,
                      9,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": ",",
                "precedence": [
                  8,
                  8,
                ],
              },
              "name": "operator",
            },
          ],
          "data": {
            "operator": "parens",
            "precedence": [
              null,
              null,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": "func",
        "precedence": [
          null,
          2,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast fn multiple args 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "value": "acc",
              },
              "name": "name",
            },
            {
              "children": [],
              "data": {
                "value": "item",
              },
              "name": "name",
            },
          ],
          "data": {
            "operator": ",",
            "precedence": [
              8,
              8,
            ],
          },
          "name": "operator",
        },
        {
          "children": [
            {
              "children": [],
              "data": {},
              "name": "implicit_placeholder",
            },
          ],
          "data": {
            "operator": "parens",
            "precedence": [
              null,
              null,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": "func",
        "precedence": [
          null,
          2,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast parse numbers 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "numbers",
          },
          "name": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "flat_map",
                  },
                  "name": "name",
                },
                {
                  "children": [],
                  "data": {
                    "value": "lines",
                  },
                  "name": "name",
                },
              ],
              "data": {
                "operator": "application",
                "precedence": [
                  9007199254740991,
                  9007199254740992,
                ],
              },
              "name": "operator",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "line",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "digits",
                          },
                          "name": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {},
                              "name": "implicit_placeholder",
                            },
                          ],
                          "data": {
                            "operator": "parens",
                            "precedence": [
                              null,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": ":=",
                        "precedence": [
                          null,
                          1,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "line",
                              },
                              "name": "name",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": "",
                              },
                              "name": "string",
                            },
                          ],
                          "data": {
                            "operator": "!=",
                            "precedence": [
                              7,
                              6,
                            ],
                          },
                          "name": "operator",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "match",
                                              },
                                              "name": "name",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "d",
                                              },
                                              "name": "string",
                                            },
                                          ],
                                          "data": {
                                            "operator": "application",
                                            "precedence": [
                                              9007199254740991,
                                              9007199254740992,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                        {
                                          "children": [],
                                          "data": {
                                            "value": "line",
                                          },
                                          "name": "name",
                                        },
                                      ],
                                      "data": {
                                        "operator": "application",
                                        "precedence": [
                                          9007199254740991,
                                          9007199254740992,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                    {
                                      "children": [],
                                      "data": {
                                        "value": 0,
                                      },
                                      "name": "number",
                                    },
                                  ],
                                  "data": {
                                    "operator": "index",
                                    "precedence": [
                                      9007199254740991,
                                      null,
                                    ],
                                  },
                                  "name": "operator",
                                },
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "data": {
                                            "value": "digit",
                                          },
                                          "name": "name",
                                        },
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "number",
                                                  },
                                                  "name": "name",
                                                },
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "line",
                                                  },
                                                  "name": "name",
                                                },
                                              ],
                                              "data": {
                                                "operator": "application",
                                                "precedence": [
                                                  9007199254740991,
                                                  9007199254740992,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": 0,
                                              },
                                              "name": "number",
                                            },
                                          ],
                                          "data": {
                                            "operator": "index",
                                            "precedence": [
                                              9007199254740991,
                                              null,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": ":=",
                                        "precedence": [
                                          null,
                                          1,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "digits",
                                                  },
                                                  "name": "name",
                                                },
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": 0,
                                                  },
                                                  "name": "number",
                                                },
                                              ],
                                              "data": {
                                                "operator": "index",
                                                "precedence": [
                                                  9007199254740991,
                                                  null,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                          ],
                                          "data": {
                                            "operator": "not",
                                            "precedence": [
                                              null,
                                              9,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": "digits",
                                                      },
                                                      "name": "name",
                                                    },
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": 0,
                                                      },
                                                      "name": "number",
                                                    },
                                                  ],
                                                  "data": {
                                                    "operator": "index",
                                                    "precedence": [
                                                      9007199254740991,
                                                      null,
                                                    ],
                                                  },
                                                  "name": "operator",
                                                },
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "=",
                                                  },
                                                  "name": "name",
                                                },
                                              ],
                                              "data": {
                                                "operator": "application",
                                                "precedence": [
                                                  9007199254740991,
                                                  9007199254740992,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "digit",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "application",
                                            "precedence": [
                                              9007199254740991,
                                              9007199254740992,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": "if",
                                        "precedence": [
                                          null,
                                          2,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "digits",
                                                  },
                                                  "name": "name",
                                                },
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": 1,
                                                  },
                                                  "name": "number",
                                                },
                                              ],
                                              "data": {
                                                "operator": "index",
                                                "precedence": [
                                                  9007199254740991,
                                                  null,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "=",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "application",
                                            "precedence": [
                                              9007199254740991,
                                              9007199254740992,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                        {
                                          "children": [],
                                          "data": {
                                            "value": "digit",
                                          },
                                          "name": "name",
                                        },
                                      ],
                                      "data": {
                                        "operator": "application",
                                        "precedence": [
                                          9007199254740991,
                                          9007199254740992,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                  ],
                                  "data": {
                                    "operator": "block",
                                    "precedence": [
                                      null,
                                      null,
                                    ],
                                  },
                                  "name": "operator",
                                },
                              ],
                              "data": {
                                "operator": "if",
                                "precedence": [
                                  null,
                                  null,
                                ],
                              },
                              "name": "operator",
                            },
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [],
                                          "data": {},
                                          "name": "placeholder",
                                        },
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "line",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "...",
                                            "precedence": [
                                              null,
                                              9,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": ",",
                                        "precedence": [
                                          8,
                                          8,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                  ],
                                  "data": {
                                    "operator": "parens",
                                    "precedence": [
                                      null,
                                      null,
                                    ],
                                  },
                                  "name": "operator",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": "line",
                                  },
                                  "name": "name",
                                },
                              ],
                              "data": {
                                "operator": "=",
                                "precedence": [
                                  null,
                                  1,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "operator": "block",
                            "precedence": [
                              null,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "while",
                        "precedence": [
                          null,
                          null,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "digits",
                              },
                              "name": "name",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": 0,
                              },
                              "name": "number",
                            },
                          ],
                          "data": {
                            "operator": "index",
                            "precedence": [
                              9007199254740991,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "value": "digits",
                                  },
                                  "name": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": 1,
                                  },
                                  "name": "number",
                                },
                              ],
                              "data": {
                                "operator": "index",
                                "precedence": [
                                  9007199254740991,
                                  null,
                                ],
                              },
                              "name": "operator",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": 10,
                              },
                              "name": "number",
                            },
                          ],
                          "data": {
                            "operator": "*",
                            "precedence": [
                              14,
                              14,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": ",",
                        "precedence": [
                          8,
                          8,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "block",
                    "precedence": [
                      null,
                      null,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": "func",
                "precedence": [
                  null,
                  null,
                ],
              },
              "name": "operator",
            },
          ],
          "data": {
            "operator": "application",
            "precedence": [
              9007199254740991,
              9007199254740992,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": ":=",
        "precedence": [
          null,
          1,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast reduce list 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "reduce",
          },
          "name": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "list",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "reducer",
                      },
                      "name": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "merge",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "initial",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": ",",
                        "precedence": [
                          8,
                          8,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": ",",
                    "precedence": [
                      8,
                      8,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": ",",
                "precedence": [
                  8,
                  8,
                ],
              },
              "name": "operator",
            },
            {
              "children": [
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "len",
                      },
                      "name": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "length",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "list",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": ":=",
                    "precedence": [
                      null,
                      1,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "len",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": 0,
                          },
                          "name": "number",
                        },
                      ],
                      "data": {
                        "operator": "==",
                        "precedence": [
                          7,
                          6,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "return",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "initial",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "if",
                    "precedence": [
                      null,
                      2,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "midpoint",
                      },
                      "name": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "floor",
                          },
                          "name": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "value": "len",
                                  },
                                  "name": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": 2,
                                  },
                                  "name": "number",
                                },
                              ],
                              "data": {
                                "operator": "/",
                                "precedence": [
                                  15,
                                  16,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "operator": "parens",
                            "precedence": [
                              null,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": ":=",
                    "precedence": [
                      null,
                      1,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [],
                      "data": {
                        "value": "item",
                      },
                      "name": "name",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "list",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "midpoint",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "index",
                        "precedence": [
                          9007199254740991,
                          null,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": ":=",
                    "precedence": [
                      null,
                      1,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "first",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "second",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": ",",
                        "precedence": [
                          8,
                          8,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "all",
                          },
                          "name": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [
                                                    {
                                                      "children": [
                                                        {
                                                          "children": [
                                                            {
                                                              "children": [],
                                                              "data": {
                                                                "value": "reduce",
                                                              },
                                                              "name": "name",
                                                            },
                                                            {
                                                              "children": [],
                                                              "data": {
                                                                "value": "slice",
                                                              },
                                                              "name": "name",
                                                            },
                                                          ],
                                                          "data": {
                                                            "operator": "application",
                                                            "precedence": [
                                                              9007199254740991,
                                                              9007199254740992,
                                                            ],
                                                          },
                                                          "name": "operator",
                                                        },
                                                        {
                                                          "children": [
                                                            {
                                                              "children": [
                                                                {
                                                                  "children": [],
                                                                  "data": {
                                                                    "value": "list",
                                                                  },
                                                                  "name": "name",
                                                                },
                                                                {
                                                                  "children": [
                                                                    {
                                                                      "children": [],
                                                                      "data": {
                                                                        "value": 0,
                                                                      },
                                                                      "name": "number",
                                                                    },
                                                                    {
                                                                      "children": [],
                                                                      "data": {
                                                                        "value": "midpoint",
                                                                      },
                                                                      "name": "name",
                                                                    },
                                                                  ],
                                                                  "data": {
                                                                    "operator": ",",
                                                                    "precedence": [
                                                                      8,
                                                                      8,
                                                                    ],
                                                                  },
                                                                  "name": "operator",
                                                                },
                                                              ],
                                                              "data": {
                                                                "operator": ",",
                                                                "precedence": [
                                                                  8,
                                                                  8,
                                                                ],
                                                              },
                                                              "name": "operator",
                                                            },
                                                          ],
                                                          "data": {
                                                            "operator": "parens",
                                                            "precedence": [
                                                              null,
                                                              null,
                                                            ],
                                                          },
                                                          "name": "operator",
                                                        },
                                                      ],
                                                      "data": {
                                                        "operator": "application",
                                                        "precedence": [
                                                          9007199254740991,
                                                          9007199254740992,
                                                        ],
                                                      },
                                                      "name": "operator",
                                                    },
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": "reducer",
                                                      },
                                                      "name": "name",
                                                    },
                                                  ],
                                                  "data": {
                                                    "operator": "application",
                                                    "precedence": [
                                                      9007199254740991,
                                                      9007199254740992,
                                                    ],
                                                  },
                                                  "name": "operator",
                                                },
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "merge",
                                                  },
                                                  "name": "name",
                                                },
                                              ],
                                              "data": {
                                                "operator": "application",
                                                "precedence": [
                                                  9007199254740991,
                                                  9007199254740992,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "initial",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "application",
                                            "precedence": [
                                              9007199254740991,
                                              9007199254740992,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": "parens",
                                        "precedence": [
                                          null,
                                          null,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                  ],
                                  "data": {
                                    "operator": "parallel",
                                    "precedence": [
                                      3,
                                      3,
                                    ],
                                  },
                                  "name": "operator",
                                },
                              ],
                              "data": {
                                "operator": "parens",
                                "precedence": [
                                  null,
                                  null,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "cause": [Error: SystemError: 6],
                          },
                          "name": "error",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": ":=",
                    "precedence": [
                      null,
                      1,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [
                                        {
                                          "children": [
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "reduce",
                                              },
                                              "name": "name",
                                            },
                                            {
                                              "children": [],
                                              "data": {
                                                "value": "slice",
                                              },
                                              "name": "name",
                                            },
                                          ],
                                          "data": {
                                            "operator": "application",
                                            "precedence": [
                                              9007199254740991,
                                              9007199254740992,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                        {
                                          "children": [
                                            {
                                              "children": [
                                                {
                                                  "children": [],
                                                  "data": {
                                                    "value": "list",
                                                  },
                                                  "name": "name",
                                                },
                                                {
                                                  "children": [
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": "midpoint",
                                                      },
                                                      "name": "name",
                                                    },
                                                    {
                                                      "children": [],
                                                      "data": {
                                                        "value": 1,
                                                      },
                                                      "name": "number",
                                                    },
                                                  ],
                                                  "data": {
                                                    "operator": "add",
                                                    "precedence": [
                                                      11,
                                                      11,
                                                    ],
                                                  },
                                                  "name": "operator",
                                                },
                                              ],
                                              "data": {
                                                "operator": ",",
                                                "precedence": [
                                                  8,
                                                  8,
                                                ],
                                              },
                                              "name": "operator",
                                            },
                                          ],
                                          "data": {
                                            "operator": "parens",
                                            "precedence": [
                                              null,
                                              null,
                                            ],
                                          },
                                          "name": "operator",
                                        },
                                      ],
                                      "data": {
                                        "operator": "application",
                                        "precedence": [
                                          9007199254740991,
                                          9007199254740992,
                                        ],
                                      },
                                      "name": "operator",
                                    },
                                    {
                                      "children": [],
                                      "data": {
                                        "value": "reducer",
                                      },
                                      "name": "name",
                                    },
                                  ],
                                  "data": {
                                    "operator": "application",
                                    "precedence": [
                                      9007199254740991,
                                      9007199254740992,
                                    ],
                                  },
                                  "name": "operator",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": "merge",
                                  },
                                  "name": "name",
                                },
                              ],
                              "data": {
                                "operator": "application",
                                "precedence": [
                                  9007199254740991,
                                  9007199254740992,
                                ],
                              },
                              "name": "operator",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": "initial",
                              },
                              "name": "name",
                            },
                          ],
                          "data": {
                            "operator": "application",
                            "precedence": [
                              9007199254740991,
                              9007199254740992,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "parens",
                        "precedence": [
                          null,
                          null,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "parallel",
                    "precedence": [
                      3,
                      3,
                    ],
                  },
                  "name": "operator",
                },
                {
                  "children": [],
                  "data": {
                    "value": ")",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "merge",
                          },
                          "name": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [
                                    {
                                      "children": [],
                                      "data": {
                                        "value": "reducer",
                                      },
                                      "name": "name",
                                    },
                                    {
                                      "children": [],
                                      "data": {
                                        "value": "first",
                                      },
                                      "name": "name",
                                    },
                                  ],
                                  "data": {
                                    "operator": "application",
                                    "precedence": [
                                      9007199254740991,
                                      9007199254740992,
                                    ],
                                  },
                                  "name": "operator",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": "item",
                                  },
                                  "name": "name",
                                },
                              ],
                              "data": {
                                "operator": "application",
                                "precedence": [
                                  9007199254740991,
                                  9007199254740992,
                                ],
                              },
                              "name": "operator",
                            },
                          ],
                          "data": {
                            "operator": "parens",
                            "precedence": [
                              null,
                              null,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [],
                      "data": {
                        "value": "second",
                      },
                      "name": "name",
                    },
                  ],
                  "data": {
                    "operator": "application",
                    "precedence": [
                      9007199254740991,
                      9007199254740992,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": "block",
                "precedence": [
                  null,
                  null,
                ],
              },
              "name": "operator",
            },
          ],
          "data": {
            "operator": "func",
            "precedence": [
              null,
              null,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": ":=",
        "precedence": [
          null,
          1,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast split lines 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "lines",
          },
          "name": "name",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "lines",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "split",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "document",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [],
                      "data": {
                        "value": "n",
                      },
                      "name": "string",
                    },
                  ],
                  "data": {
                    "operator": "application",
                    "precedence": [
                      9007199254740991,
                      9007199254740992,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": ":=",
                "precedence": [
                  null,
                  1,
                ],
              },
              "name": "operator",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "lines",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "map",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "lines",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "children": [
                                {
                                  "children": [],
                                  "data": {
                                    "value": "replace",
                                  },
                                  "name": "name",
                                },
                                {
                                  "children": [],
                                  "data": {
                                    "value": "w+",
                                  },
                                  "name": "string",
                                },
                              ],
                              "data": {
                                "operator": "application",
                                "precedence": [
                                  9007199254740991,
                                  9007199254740992,
                                ],
                              },
                              "name": "operator",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": "",
                              },
                              "name": "string",
                            },
                          ],
                          "data": {
                            "operator": "application",
                            "precedence": [
                              9007199254740991,
                              9007199254740992,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "parens",
                        "precedence": [
                          null,
                          null,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "application",
                    "precedence": [
                      9007199254740991,
                      9007199254740992,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": "=",
                "precedence": [
                  null,
                  1,
                ],
              },
              "name": "operator",
            },
            {
              "children": [
                {
                  "children": [],
                  "data": {
                    "value": "lines",
                  },
                  "name": "name",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "filter",
                          },
                          "name": "name",
                        },
                        {
                          "children": [],
                          "data": {
                            "value": "lines",
                          },
                          "name": "name",
                        },
                      ],
                      "data": {
                        "operator": "application",
                        "precedence": [
                          9007199254740991,
                          9007199254740992,
                        ],
                      },
                      "name": "operator",
                    },
                    {
                      "children": [
                        {
                          "children": [],
                          "data": {
                            "value": "line",
                          },
                          "name": "name",
                        },
                        {
                          "children": [
                            {
                              "children": [],
                              "data": {
                                "value": "line",
                              },
                              "name": "name",
                            },
                            {
                              "children": [],
                              "data": {
                                "value": "",
                              },
                              "name": "string",
                            },
                          ],
                          "data": {
                            "operator": "!=",
                            "precedence": [
                              7,
                              6,
                            ],
                          },
                          "name": "operator",
                        },
                      ],
                      "data": {
                        "operator": "func",
                        "precedence": [
                          null,
                          2,
                        ],
                      },
                      "name": "operator",
                    },
                  ],
                  "data": {
                    "operator": "application",
                    "precedence": [
                      9007199254740991,
                      9007199254740992,
                    ],
                  },
                  "name": "operator",
                },
              ],
              "data": {
                "operator": "=",
                "precedence": [
                  null,
                  1,
                ],
              },
              "name": "operator",
            },
          ],
          "data": {
            "operator": "block",
            "precedence": [
              null,
              null,
            ],
          },
          "name": "operator",
        },
      ],
      "data": {
        "operator": ":=",
        "precedence": [
          null,
          1,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;

exports[`ast variable 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "data": {
            "value": "document",
          },
          "name": "name",
        },
        {
          "children": [],
          "data": {
            "value": "
        1abc2
        pqr3stu8vwx
        a1b2c3d4e5f
        treb7uchet
      ",
          },
          "name": "string",
        },
      ],
      "data": {
        "operator": ":=",
        "precedence": [
          null,
          1,
        ],
      },
      "name": "operator",
    },
  ],
  "data": {},
  "name": "script",
}
`;
